--- a/Recipes/Recipes/Resources/Base.lproj/Main.storyboard
+++ b/Recipes/Recipes/Resources/Base.lproj/Main.storyboard
@@ -1,10 +1,167 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.3.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="41Q-Gu-YwA">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.1"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Main View Controller-->
+        <scene sceneID="9Ed-Z1-iX7">
+            <objects>
+                <viewController id="fte-hU-XEV" customClass="MainViewController" customModule="Recipes" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="el1-79-MrX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Ioc-XM-cbc">
+                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yLg-dT-ER0">
+                                        <rect key="frame" x="6" y="0.0" width="363" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="search:" destination="fte-hU-XEV" eventType="editingDidEnd" id="VPC-4h-BZO"/>
+                                        </connections>
+                                    </textField>
+                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="57r-X9-HJo">
+                                        <rect key="frame" x="0.0" y="38" width="375" height="559"/>
+                                        <connections>
+                                            <segue destination="XJx-4z-olf" kind="embed" identifier="EmbedRecipeTableView" id="N1T-JP-Db7"/>
+                                        </connections>
+                                    </containerView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="yLg-dT-ER0" secondAttribute="trailing" constant="6" id="FB9-6q-tAs" userLabel="trailing = Search Text Field.trailing + 16"/>
+                                    <constraint firstItem="yLg-dT-ER0" firstAttribute="leading" secondItem="Ioc-XM-cbc" secondAttribute="leading" constant="6" id="cBg-OZ-HQu" userLabel="Search Text Field.leading = leading + 16"/>
+                                    <constraint firstAttribute="trailing" secondItem="57r-X9-HJo" secondAttribute="trailing" id="cIL-Zj-ciy"/>
+                                    <constraint firstItem="57r-X9-HJo" firstAttribute="leading" secondItem="Ioc-XM-cbc" secondAttribute="leading" id="ggP-GA-YJ5"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Ioc-XM-cbc" firstAttribute="top" secondItem="g0G-LY-tBv" secondAttribute="top" constant="6" id="3z9-xE-iHv"/>
+                            <constraint firstItem="g0G-LY-tBv" firstAttribute="trailing" secondItem="Ioc-XM-cbc" secondAttribute="trailing" id="ITg-2Y-wiX"/>
+                            <constraint firstItem="g0G-LY-tBv" firstAttribute="bottom" secondItem="Ioc-XM-cbc" secondAttribute="bottom" id="XLY-od-R2g"/>
+                            <constraint firstItem="Ioc-XM-cbc" firstAttribute="leading" secondItem="el1-79-MrX" secondAttribute="leading" id="XYP-j4-bHg"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="g0G-LY-tBv"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="wyB-Ld-8Uf"/>
+                    <connections>
+                        <outlet property="searchTextField" destination="yLg-dT-ER0" id="foW-ug-52D"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pOI-vR-W58" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="980" y="90.404797601199405"/>
+        </scene>
+        <!--Recipes Table View Controller-->
+        <scene sceneID="6s2-aL-oA8">
+            <objects>
+                <tableViewController id="XJx-4z-olf" customClass="RecipesTableViewController" customModule="Recipes" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="KTA-Vk-AbR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="559"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecipeCell" textLabel="37V-az-2qQ" style="IBUITableViewCellStyleDefault" id="HgN-4F-3T4">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HgN-4F-3T4" id="hgN-3L-Cza">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="37V-az-2qQ">
+                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Y7b-m4-oHG" kind="show" identifier="ShowRecipeDetails" id="Qru-Dk-D0H"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="XJx-4z-olf" id="Avd-PY-6uc"/>
+                            <outlet property="delegate" destination="XJx-4z-olf" id="ex9-8T-eoS"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8cy-3U-Imi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1730" y="90"/>
+        </scene>
+        <!--Recipe Detail View Controller-->
+        <scene sceneID="O9N-hU-89h">
+            <objects>
+                <viewController id="Y7b-m4-oHG" customClass="RecipeDetailViewController" customModule="Recipes" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SQh-lZ-3wf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="559"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="HoX-er-HJU">
+                                <rect key="frame" x="16" y="36" width="343" height="507"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ABI-oo-hYT">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="33.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="28"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="S4Z-ob-bls">
+                                        <rect key="frame" x="0.0" y="41.5" width="343" height="465.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="HoX-er-HJU" firstAttribute="leading" secondItem="JSZ-xr-K0o" secondAttribute="leading" constant="16" id="Dul-BF-g0E"/>
+                            <constraint firstItem="JSZ-xr-K0o" firstAttribute="trailing" secondItem="HoX-er-HJU" secondAttribute="trailing" constant="16" id="X2e-aP-bek"/>
+                            <constraint firstItem="JSZ-xr-K0o" firstAttribute="bottom" secondItem="HoX-er-HJU" secondAttribute="bottom" constant="16" id="c2k-XE-rca"/>
+                            <constraint firstItem="HoX-er-HJU" firstAttribute="top" secondItem="JSZ-xr-K0o" secondAttribute="top" constant="16" id="eoV-mU-ODh"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="JSZ-xr-K0o"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SSb-M3-vji" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2511" y="90"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="L40-e5-e45">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="41Q-Gu-YwA" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PeI-vE-adW">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="fte-hU-XEV" kind="relationship" relationship="rootViewController" id="Mxu-Oe-kgy"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EMq-Ls-5Sf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="236" y="90"/>
+        </scene>
+    </scenes>
 </document>
